able to generate functions and its direct and indirect calls

--- a/cgenerator/lib/CMakeLists.txt
+++ b/cgenerator/lib/CMakeLists.txt
@@ -12,8 +12,10 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 SET(CMAKE_CXX_FLAGS "-Wall -fno-rtti")
 
 add_library(CallGraph SHARED CallGraph.cc)
+#add_library(MPCallGraph SHARED MPCallGraph.cc)
 
 
 llvm_map_components_to_libnames(llvm_libs all)
 
 target_link_libraries(CallGraph ${llvm_libs})
+#target_link_libraries(MPCallGraph ${llvm_libs})
