--- a/cgenerator/lib/CMakeLists.txt
+++ b/cgenerator/lib/CMakeLists.txt
@@ -11,11 +11,25 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 SET(CMAKE_CXX_FLAGS "-Wall -fno-rtti")
 
-add_library(CallGraph SHARED CallGraph.cc)
+#add_library(FuncCallGraph SHARED FuncCallGraph.cc)
 #add_library(MPCallGraph SHARED MPCallGraph.cc)
 
+add_executable(cgenerator Generator.cc 
+						  Generator.h
+						  CallGraph.cc
+						  CallGraph.h)
 
-llvm_map_components_to_libnames(llvm_libs all)
+#llvm_map_components_to_libnames(llvm_libs all)
 
-target_link_libraries(CallGraph ${llvm_libs})
+# Should figure out what this path
+# set(EXECUTABLE_OUTPUT_PATH ${GENERATOR_BINARY_DIR})
+
+#target_link_libraries(FuncCallGraph ${llvm_libs})
+#target_link_libraries(cgenerator ${llvm_libs})
+target_link_libraries(cgenerator 
+						LLVMAsmParser 
+						LLVMSupport 
+						LLVMCore 
+						LLVMAnalysis
+						LLVMIRReader)
 #target_link_libraries(MPCallGraph ${llvm_libs})
